@@ -1,3 +1,13 @@
+2010-11-15  Patrick Gansterer  <paroga@webkit.org>
+
+        Reviewed by Andreas Kling.
+
+        [CMake] Add additional flags to cmakeconfig.h
+        https://bugs.webkit.org/show_bug.cgi?id=49556
+
+        * cmake/OptionsEfl.cmake:
+        * cmakeconfig.h.cmake:
+
 2010-11-14  Ryuan Choi  <ryuan.choi@samsung.com>
 
         Reviewed by Martin Robinson.
